--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -108,3 +108,5 @@ $theme-colors: map-merge(
 
 $enable-transitions: true;
 $enable-responsive-font-sizes: true;
+
+$yiq-contrasted-threshold: 200;
